# arena

./: .gitignore  ARENA_MANUAL.md  Cargo.toml  PROJECT_SUMMARY.md  README.md  TODO.md  debug_test.rs  demo.sh  session-arena-complete.md  simple_demo.sh  test_morphlex_integration.rs  test_simple.rs
.github/: dependabot.yml
arenax/: go.mod
arenax/cmd/arenax/: main.go
arenax/hooks/: pre-commit.advisory  pre-commit.blocking  pre-push.advisory  pre-push.blocking
arenax/internal/arena/: arena.go  arena_test.go
arenax/internal/arena/arena-sessions/: sessions.jsonl
arenax/internal/config/: config.go  config_test.go
arenax/internal/drift/: drift.go  drift_test.go
arenax/internal/gitx/: gitx.go  gitx_test.go
arenax/internal/review/: review.go  review_test.go
arenax/internal/sizebound/: bound.go  sizebound.go  sizebound_test.go
config/: default.yaml
design_specs/: coding_standards.md
docs/specs/dev-integration/: DESIGN_SPECIFICATION.md  IMPLEMENTATION_PLAN_M1.md  REQUIREMENTS.md  TECHNICAL_SPECIFICATION.md
session_templates/: code_review_template.json  implementation_template.json  validation_template.json
src/: lib.rs  main.rs
src/adapters/: adapter.rs  anthropic.rs  endpoint.rs  mock.rs  mod.rs  morphlex.rs  openai.rs  xai.rs
src/arena/: consensus.rs  mod.rs  orchestrator.rs
src/cli/: commands.rs  mod.rs
src/drift/: detector.rs  mod.rs
src/integration/: config.rs  handlers.rs  mod.rs  runner.rs
src/metrics/: metrics.rs  mod.rs
src/session/: mod.rs  session_store.rs  state.rs  types.rs
tests/: morphlex_integration_test.rs
