[package]
name = "arena"
version = "0.1.0"
edition = "2021"
description = "Multi-agent arena system for checks and balances in development"
authors = ["Trident Markets Group LLC"]
license = "Proprietary"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
blake3 = "1.5"
prometheus = "0.13"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
futures = "0.3"
sha2 = "0.10"
anyhow = "1.0"
crossterm = "0.27"
ratatui = "0.26"
libloading = "0.8"
libc = "0.2"

[dev-dependencies]
proptest = "1.4"
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
strip = true
