[package]
name = "arena"
version = "0.1.0"
edition = "2021"
description = "Multi-agent arena system for checks and balances in development"
authors = ["Trident Markets Group LLC"]
license = "Proprietary"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
blake3 = "1.8"
prometheus = "0.13"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
futures = "0.3"
sha2 = "0.11"
anyhow = "1.0"
# TUI stack is pinned to exact versions because ratatui and crossterm
# are tightly coupled (ratatui re-exports and depends on specific crossterm features).
# Dependabot is configured to group these two so they are always updated together.
# Major version bumps should be reviewed carefully due to potential breaking changes
# in terminal rendering, event handling, and widget APIs.
crossterm = "0.28.1"
ratatui = "0.29.0"
libloading = "0.9"
libc = "0.2"

[dev-dependencies]
proptest = "1.4"
tokio-test = "0.4"
# serde_yaml removed (unmaintained + flagged by Dependabot). The test that needed it was rewritten to use direct struct construction.

[profile.release]
opt-level = 3
lto = true
strip = true
